--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,7 @@
 title: Geografía e Historia
-description: A starter template for a Jeykll site using the Just the Docs theme!
+description: Entrevista con mi abuela y redacción sobre nuestr alimentación
 theme: just-the-docs
 
-url: https://just-the-docs.github.io
+url: https://fordarthur.github.io/recetas-de-mi-abuela-enga
 
-aux_links:
-  Template Repository: https://github.com/just-the-docs/just-the-docs-template
+
